fix(ui): improve sidebar layout, overlay and z-index issues

--- a/src/less/home.less
+++ b/src/less/home.less
@@ -82,7 +82,6 @@ div[data-type='memos_view'].mobile-view #page-wrapper {
   width: 100%;
   height: 100%;
   padding: 0;
-  transform: translateX(0);
   margin-top: -10px;
 
   > .content-wrapper {
